--- a/style.css
+++ b/style.css
@@ -7,29 +7,22 @@
   font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
 }
-.header{
-  
-    
-}
-
 .navbar{
-     border: 1px solid #ffffff;
     background-color: #1A0B2E;
     width: 100%;
     height: 92px;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-evenly; */
+    padding: 0 80px;
     align-items: center;
-    
     margin: 0 auto;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
 }
-
 .logo h1{
     color: #ffffff;
     cursor: pointer;
     font-size: 2.25em;
 }
-
 .logo span {
   background: linear-gradient(to right, #F7E93F, #FB09B4, #9100F8);
   -webkit-background-clip: text;
@@ -56,11 +49,49 @@
     color: white;
     background: linear-gradient(to left, #F7E93F 0%, #FB09B4 50%, #9100F8 100%);
     cursor: pointer;
-
+    display: flex;
+    align-items: center;
+    gap: 6px;
 }
 .nav-button i{
     padding-left: 5px;
     align-items: center;
 }
+.hamburger{
+  display: none;
+  font-size: 26px;
+  color: #fff;
+  cursor: pointer;
+}
 
+@media  screen and (max-width: 430px) {
+.nav-links, 
+.nav-button{
+    display: none;
+}
+.hamburger {
+    display: block;
+    margin-left: auto; 
+  }
+}
+/* main-section */
 
+.hero-container{
+    width: 100%;
+    height: 760px;
+    background-image: url(./assets/hero-bg.png);
+    background-position: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 70px 70px;
+    background-size: contain;
+    position: relative;
+}
+.mic-wrapper{
+    position: relative;
+    width: 350px;
+    height: 350px;
+    margin-top: 100px;
+    margin-bottom: 300px;
+}
