--- a/style.css
+++ b/style.css
@@ -8,11 +8,11 @@
   font-optical-sizing: auto;
 }
 .navbar{
-    background-color: #1A0B2E;
+    background-color: #1A0B2E; 
     width: 100%;
     height: 92px;
     display: flex;
-    justify-content: space-evenly; */
+    justify-content: space-evenly;
     padding: 0 80px;
     align-items: center;
     margin: 0 auto;
@@ -52,6 +52,7 @@
     display: flex;
     align-items: center;
     gap: 6px;
+    border: none;
 }
 .nav-button i{
     padding-left: 5px;
@@ -64,34 +65,120 @@
   cursor: pointer;
 }
 
-@media  screen and (max-width: 430px) {
-.nav-links, 
+/* main-section */
+
+.hero-container{
+    width: 100%;
+    height: 750px;
+    background-image: url(./assets/hero-bg.png);
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+    background-position: center;
+    padding: 50px 20px;
+    background-size: contain;
+    background-size: cover;
+    max-width: 1920px
+}
+
+.hero-inner-content{
+    text-align: center;
+     max-width: 100%;
+}
+
+.mic-wrapper{
+    width: 350px;
+    height: 350px;
+    color: #000;
+    position: relative;
+    right: 0; top: 10%;
+}
+.hero-circle{
+    width: 350px;
+    height: 350px;
+    bottom: 70px;
+    right: -98px;
+    position: absolute; 
+    z-index: 1;
+}
+.mic-icon{
+    width: 120px;
+    height: auto;
+    right: 15px;
+    top: 10px;
+    position: absolute; 
+    z-index: 2;
+}
+.btn-new{
+    position: absolute;
+    background: #00ff88;
+    padding: 5px 15px;
+    color: #1a0b2e;
+    border: none;
+    border-radius: 20px;
+    font-weight: bold;
+    font-size: 0.8em;
+    left: 410px;
+    top: 20px;
+     z-index: 3;
+}
+
+.hero-text h1 {
+    color: #FFFFFF;
+    font-size: 3.75em;
+    font-weight: 800;
+}
+.hero-text p{
+    position: relative;
+    top: 10px;
+    color: #ffffff;
+}
+.hero-btns{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    top: 50px;
+}
+.hero-btns .btn-spotify{
+    
+    font-size: 1rem;
+    font-weight: 600;
+     background: linear-gradient(to right, #f7e93f, #fb09b4);
+     border: none;
+     padding: 12px 25px;
+     border-radius: 25px;
+     display: flex;
+     align-items: center;
+    cursor: pointer;   
+    gap: 10px
+}
+.hero-btns .btn-subscribe{
+    background: transparent;
+    border: 1px solid #00FF88 !important;
+     color: #00ff88;
+    font-size: 1rem;
+    font-weight: 600;
+    border: none;
+    padding: 12px 25px;
+    border-radius: 25px;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    gap: 10px;
+
+}
+
+@media screen and (max-width: 576px) {
+    .nav-links, 
 .nav-button{
     display: none;
 }
 .hamburger {
     display: block;
     margin-left: auto; 
-  }
 }
-/* main-section */
-
-.hero-container{
-    width: 100%;
-    height: 760px;
-    background-image: url(./assets/hero-bg.png);
-    background-position: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 70px 70px;
-    background-size: contain;
-    position: relative;
-}
-.mic-wrapper{
-    position: relative;
-    width: 350px;
-    height: 350px;
-    margin-top: 100px;
-    margin-bottom: 300px;
-}
+.hero-container {
+        padding: 40px 15px;
+        min-height: auto;
+    }
