--- a/style.css
+++ b/style.css
@@ -78,7 +78,8 @@
     padding: 50px 20px;
     background-size: contain;
     background-size: cover;
-    max-width: 1920px
+    /* max-width: 1920px */
+
 }
 
 .hero-inner-content{
@@ -169,7 +170,7 @@
 
 }
 
-@media screen and (max-width: 576px) {
+/* @media screen and (max-width: 576px) {
     .nav-links, 
 .nav-button{
     display: none;
@@ -182,3 +183,70 @@
         padding: 40px 15px;
         min-height: auto;
     }
+} */
+
+
+/* grid-section */
+
+.grid-section{
+    background-color: #230E3D;
+    /* max-width: 1600px; */
+    width: 100%;
+    height: 1276px;
+    padding: 120px 200px 120px 200px;
+}
+.features-grid{
+    /* max-width: 1200px;
+    height: 780px; */
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    gap: 30px;
+}
+.grid-section h1 {
+    font-size: 3em;
+    color: #fff;
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 20px;
+  
+}
+.card img{
+    width: 60px;
+    height: auto;
+    margin-bottom: 16px;
+}
+.card h3 {
+    color: #FFFFFF;  margin-bottom: 10px;
+    margin-bottom: 12px;
+}
+.card p{
+    /* font-size: 1em; */
+    font-size: 0.95rem;
+    font-weight: 400;
+     color: #b0b0b0;
+    line-height: 20px;
+    text-align: left;
+}
+.card {
+    background-color: rgba(255, 255, 255, 0.05);
+    padding: 35px;
+    border-radius: 20px;
+    text-align: left;
+    border: 1px solid rgba(255, 255, 255, 0.1);
+}
+.card .box1{
+    grid-column: span 2;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+}
+.card .box-wide2, 
+.card .box-wide3{
+    grid-column: span 2;
+    grid-row: span 2;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+
