--- a/style.css
+++ b/style.css
@@ -211,10 +211,9 @@
     margin-bottom: 12px;
 }
 .card p{
-    /* font-size: 1em; */
     font-size: 0.95rem;
     font-weight: 400;
-     color: #b0b0b0;
+    color: #b0b0b0;
     line-height: 20px;
     text-align: left;
 }
@@ -226,7 +225,8 @@
     border: 1px solid rgba(255, 255, 255, 0.1);
 }
 .card .box1{
-    grid-column: span 2;
+    grid-column: span 1;
+    grid-row: span 2;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -234,9 +234,11 @@
 }
 .card .box-wide2, 
 .card .box-wide3{
-    grid-column: span 2;
+    /* grid-column: span 2; */
     grid-row: span 2;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
+
+
 
 
